---
source: spade-tests/src/ast_lowering.rs
---
$config X = 0
fn a() -> bool {
    let _ = $if X == 1 {true};
    true
}


error: Missing expression
  ┌─ testinput:3:13
  │
3 │     let _ = $if X == 1 {true};
  │             ^^^^^^^^^^^^^^^^^
  │
  = help: The current comptime branch has no expression


